Fix typo in error message Fix #1118

--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -76,11 +76,11 @@ msgstr ""
 
 msgctxt "error:account.invoice:"
 msgid ""
-"Impossible to post invoice %(invoice)s on contract %(contract)s which is "
-"%(status)s"
+"Impossible to post invoice \"%(invoice)s\" on contract \"%(contract)s\" "
+"which is \"%(status)s\""
 msgstr ""
-"Impossible d'émettre la quittance %(invoice)s du contrat %(contrat)s qui est"
-" au statut %(status)s"
+"Impossible d'émettre la quittance \"%(invoice)s\" pour contract "
+"\"%(contract)s\" au statut \"%(status)s\""
 
 msgctxt "error:account.tax.description:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
@@ -598,10 +598,6 @@ msgctxt "field:contract.premium,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "field:contract.premium,covered_element:"
-msgid "Covered Element"
-msgstr "Risque Couvert"
-
 msgctxt "field:contract.premium,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -618,10 +614,6 @@ msgctxt "field:contract.premium,end:"
 msgid "End"
 msgstr "Terminer"
 
-msgctxt "field:contract.premium,extra_premium:"
-msgid "Extra Premium"
-msgstr "Surprime"
-
 msgctxt "field:contract.premium,frequency:"
 msgid "Frequency"
 msgstr "Fréquence"
@@ -629,10 +621,6 @@ msgstr "Fréquence"
 msgctxt "field:contract.premium,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.premium,invoice_lines:"
-msgid "Invoice Lines"
-msgstr "Lignes de facture"
 
 msgctxt "field:contract.premium,main_contract:"
 msgid "Contract"
@@ -865,6 +853,11 @@ msgctxt "field:offered.option.description,account_for_billing:"
 msgid "Account for billing"
 msgstr "Compte pour le quittancement"
 
+msgctxt ""
+"field:offered.option.description.premium_rule,match_contract_frequency:"
+msgid "Match Contract Frequency"
+msgstr "Synchroniser avec la fréquence du contrat"
+
 msgctxt "field:offered.product,account_for_billing:"
 msgid "Account for billing"
 msgstr "Compte pour le quittancement"
@@ -974,6 +967,11 @@ msgstr ""
 "Une liste de nombres séparés par des virgules correspondant aux jours disponibles pour le prélèvement.\n"
 "Une liste vide signifie que tous les jours sont autorisés."
 
+msgctxt ""
+"help:offered.option.description.premium_rule,match_contract_frequency:"
+msgid "Should the premium be stored at the contract's frequency ?"
+msgstr "La prime doit-elle être stockée à la fréquence du contrat?"
+
 msgctxt "model:account.invoice.line.detail,name:"
 msgid "Invoice Line Detail"
 msgstr "Détail de ligne de quittance"
@@ -1034,10 +1032,6 @@ msgctxt "model:ir.action,name:act_offered_billing_mode"
 msgid "Billing Modes"
 msgstr "Modes de quittancement"
 
-msgctxt "model:ir.action,name:act_premium_display"
-msgid "Display Contract Premium"
-msgstr "Afficher la prime du contrat"
-
 msgctxt "model:ir.action,name:act_premium_notice_form"
 msgid "Premium Notices"
 msgstr "Quittances"
@@ -1083,6 +1077,10 @@ msgid "Party Synthesis Menu Invoice"
 msgstr "Synthèse quittance"
 
 msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "At contract signature"
+msgstr ""
+
+msgctxt "selection:account.invoice.line.detail,frequency:"
 msgid "Half-yearly"
 msgstr "Semestriel"
 
@@ -1091,7 +1089,7 @@ msgid "Monthly"
 msgstr "Mensuel"
 
 msgctxt "selection:account.invoice.line.detail,frequency:"
-msgid "Once Per Contract"
+msgid "Once per Contract"
 msgstr "Une fois par contrat"
 
 msgctxt "selection:account.invoice.line.detail,frequency:"
@@ -1101,10 +1099,6 @@ msgstr "Une fois par quittance"
 msgctxt "selection:account.invoice.line.detail,frequency:"
 msgid "Quarterly"
 msgstr "Trimestriel"
-
-msgctxt "selection:account.invoice.line.detail,frequency:"
-msgid "Yearly"
-msgstr "Annuel"
 
 msgctxt "selection:account.invoice.line.detail,frequency:"
 msgid "Yearly (360 days)"
@@ -1114,6 +1108,10 @@ msgctxt "selection:account.invoice.line.detail,frequency:"
 msgid "Yearly (365 days)"
 msgstr "Annuel (365 jours)"
 
+msgctxt "selection:account.invoice.line.detail,frequency:"
+msgid "Yearly (Exact)"
+msgstr "Annuel (exact)"
+
 msgctxt "selection:contract.premium,frequency:"
 msgid "Half-yearly"
 msgstr "Semestriel"
@@ -1123,20 +1121,12 @@ msgid "Monthly"
 msgstr "Mensuel"
 
 msgctxt "selection:contract.premium,frequency:"
-msgid "Once Per Contract"
-msgstr "Une fois par contrat"
-
-msgctxt "selection:contract.premium,frequency:"
 msgid "Once per Invoice"
 msgstr "Une fois par quittance"
 
 msgctxt "selection:contract.premium,frequency:"
 msgid "Quarterly"
 msgstr "Trimestriel"
-
-msgctxt "selection:contract.premium,frequency:"
-msgid "Yearly"
-msgstr "Annuel"
 
 msgctxt "selection:contract.premium,frequency:"
 msgid "Yearly (360 days)"
