--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -1042,7 +1042,7 @@ msgstr "Toutes"
 
 msgctxt "model:ir.action.act_window.domain,name:act_invoice_domain_canceled"
 msgid "Canceled"
-msgstr "Annulé"
+msgstr "Annulée"
 
 msgctxt "model:ir.action.act_window.domain,name:act_invoice_domain_paid"
 msgid "Paid"
