--- a/modules/account_aggregate/locale/fr_FR.po
+++ b/modules/account_aggregate/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -168,7 +168,7 @@ msgstr "Agrégat comptable"
 
 msgctxt "view:account.move.snapshot.done:"
 msgid "Moves Snapshot"
-msgstr "Instantanné des mouvements"
+msgstr "Instantané des mouvements"
 
 msgctxt "view:account.move.snapshot.done:"
 msgid "The snapshot has been taken!"
@@ -176,7 +176,7 @@ msgstr "L'instantané a été pris!"
 
 msgctxt "view:account.move.snapshot.start:"
 msgid "Moves Snapshot"
-msgstr "Instantanné des mouvements"
+msgstr "Instantané des mouvements"
 
 msgctxt "view:account.move.snapshot.start:"
 msgid "Take a snapshot of moves"
