--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -193,6 +193,10 @@ msgctxt "field:contract,contract_number:"
 msgid "Contract Number"
 msgstr "Numéro de Contrat"
 
+msgctxt "field:contract,covered_element_options:"
+msgid "Covered Element Options"
+msgstr "Options de l'élément couvert"
+
 msgctxt "field:contract,covered_elements:"
 msgid "Covered Elements"
 msgstr "Risques Couverts"
@@ -1020,10 +1024,6 @@ msgstr "Dépense"
 
 msgctxt "model:ir.action,name:"
 msgid "Status History"
-msgstr "Gérer les Options"
-
-msgctxt "model:ir.action,name:None"
-msgid "Manage Options"
 msgstr "Gérer les Options"
 
 msgctxt "model:ir.action,name:act_contract_activation_history_relate_form"
