--- a/modules/premium/locale/fr_FR.po
+++ b/modules/premium/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -740,7 +740,7 @@ msgstr "Règles de Cotisation"
 
 msgctxt "view:offered.option.description:"
 msgid "Premium Data"
-msgstr "Données de prime"
+msgstr "Cotisation"
 
 msgctxt "view:offered.product.premium_dates:"
 msgid "Pricing Date Configuration"
